--- a/main.scss
+++ b/main.scss
@@ -24,7 +24,8 @@ html{
 html,body{
     margin: 0;
     padding: 0;
-    width: 100%;
+    height: 100%;
+    position: relative;
 }
 header{
     display: block;
@@ -58,6 +59,24 @@ a{
 .btn_note{
     @include btn-menu;
     background-color: #FF4081;
+    position: relative;
+    z-index: 1;
+    &:hover{
+        &::after{
+            opacity: 1;
+        }
+    }
+        &::after{
+            content:"";
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            background-color: opacity(rgb(243, 103, 150));
+            z-index: -1;
+            transform: opacity 250ms;
+        }
 }
 .btn_chic{
     @include btn-menu; 
@@ -72,7 +91,8 @@ a{
     background-color: #40C4FF;
 }
 .btn{
-    display: inline-block;
+    display: flex;
+    justify-content: center;
     background-color: #4CAF50;
     color: $color-secondary;
     font-size: 1.5rem;
@@ -101,17 +121,17 @@ a{
         }
     }   
 .load {
-        width: $size*10;
-        height: $size*7.5;
-        display: flex;
-        justify-content: space-evenly;
+    width: $size*10;
+    height: $size;
+    display: flex;
+    justify-content: space-evenly;
         &__dot {
             background-color: $cd-dot;
             height: 100%;
             width: $size;
             animation: dot $anim-dur;
-        }
-    }   
+    }
+}   
 @keyframes dot {
         0% {
             transform: scalex(0.5);
@@ -124,18 +144,18 @@ footer{
     display: flex;
     justify-content: space-between;
     text-align: justify;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
     background-color: #4CAF50;
-    color: $color-secondary;
     font-size: 1.5rem;
-    text-decoration: none;
+    font-weight: bold;
+    color: $color-secondary;
  }
 .mention{
     padding-left: 2rem;
-    text-decoration: none;
-    color: $color-secondary;
 }
 .contact{
     padding-right: 2rem;
-    text-decoration: none;
-    color: $color-secondary;
 }
