--- a/main.scss
+++ b/main.scss
@@ -5,9 +5,7 @@ $size: 1vh;
 $anim-dur: 1000ms;
 $anim-delay: $anim-dur / 5;
 @mixin btn-menu {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: inline-block;
     height: 40rem;
     width: 20rem;
     text-align: center;
@@ -45,51 +43,20 @@ header{
              url('RobotoCondensed-BoldItalic-webfont.svg#roboto_condensedbold_italic') format('svg');
         font-weight: normal;
         font-style: normal;
-    
     }
 }
-a{
+ul, li{
+    display: inline-block;
+    list-style: none;
+    width: 30%;
+    text-align: center;
+}
+ ul li a{
+    display: block;
     text-decoration: none;
+    font-size: 2rem;
 }
-.haut, .bas{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-.btn_note{
-    @include btn-menu;
-    background-color: #FF4081;
-    position: relative;
-    z-index: 1;
-    &:hover{
-        &::after{
-            opacity: 1;
-        }
-    }
-        &::after{
-            content:"";
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            background-color: opacity(rgb(243, 103, 150));
-            z-index: -1;
-            transform: opacity 250ms;
-        }
-}
-.btn_chic{
-    @include btn-menu; 
-    background-color: #E040FB;
-}
-.btn_delice{
-    @include btn-menu;
-    background-color: #536DFE;
-}
-.btn_gout{
-    @include btn-menu;
-    background-color: #40C4FF;
-}
+
 .btn{
     display: flex;
     justify-content: center;
@@ -100,46 +67,83 @@ a{
     text-align: center;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
-    border-radius:10rem;
-    -moz-border-radius:10rem;
-    -webkit-border-radius:10rem;
+    border-radius:5rem;
+    -moz-border-radius:5rem;
+    -webkit-border-radius:5rem;
     margin-left: 40%;
     margin-right: 50%;
-    width: 20rem;
-    margin-bottom: 4rem;
-        &:active {
-            .load {
-                &__dot {
-                    animation: dot $anim-dur backwards infinite ease-in-out alternate;
-                    @for $i from 1 through 5 {
-                        &--#{$i} {
-                            animation-delay: $anim-delay * $i;
-                        }
-                    }
-                }
-            }
-        }
-    }   
-.load {
-    width: $size*10;
-    height: $size;
-    display: flex;
-    justify-content: space-evenly;
-        &__dot {
-            background-color: $cd-dot;
-            height: 100%;
-            width: $size;
-            animation: dot $anim-dur;
-    }
+    margin-top: 4rem;
+    width: 25rem;
+    margin-bottom: 10rem;
+        &_loading{
+    font-size: 2rem;
+    color: #424242;
+    text-align: center;
+}
 }   
-@keyframes dot {
-        0% {
-            transform: scalex(0.5);
-        }
-        100% {
-            transform: scalex(1.0);
-        }
+.dot1 {
+    animation: visibility 3s linear infinite;
+     }
+    @keyframes visibility {
+    0% {
+     opacity: 1;
     }
+    65% {
+    opacity: 1;
+    }
+    66% {
+    opacity: 0;
+    }
+    100% {
+    opacity: 0;
+    }
+    }
+.dot2 {
+    animation: visibility2 3s linear infinite;
+    }
+    @keyframes visibility2 {
+    0% {
+    opacity: 0;
+    }
+    21% {
+    opacity: 0;
+    }
+    22% {
+    opacity: 1;
+    }
+    65% {
+    opacity: 1;
+    }
+    66% {
+    opacity: 0;
+    }
+    100% {
+    opacity: 0;
+    }
+    }
+.dot3 {
+    animation: visibility3 3s linear infinite;
+    }
+     @keyframes visibility3 {
+    0% {
+    opacity: 0;
+    }
+    43% {
+    opacity: 0;
+    }
+    44% {
+    opacity: 1;
+    }
+    65% {
+    opacity: 1;
+    }
+    66% {
+    opacity: 0;
+    }
+    100% {
+    opacity: 0;
+    }
+}
 footer{
     display: flex;
     justify-content: space-between;
