--- a/style.css
+++ b/style.css
@@ -19,95 +19,24 @@ header {
   text-align: center;
 }
 @font-face {
-  header {
     font-family: "roboto_condensedbold_italic";
     src: url("RobotoCondensed-BoldItalic-webfont.eot");
     src: url("RobotoCondensed-BoldItalic-webfont.eot?#iefix") format("embedded-opentype"), url("RobotoCondensed-BoldItalic-webfont.woff2") format("woff2"), url("RobotoCondensed-BoldItalic-webfont.woff") format("woff"), url("RobotoCondensed-BoldItalic-webfont.ttf") format("truetype"), url("RobotoCondensed-BoldItalic-webfont.svg#roboto_condensedbold_italic") format("svg");
     font-weight: normal;
     font-style: normal;
-  }
 }
 
-a {
+ul, li {
+  display: inline-block;
+  list-style: none;
+  width: 30%;
+  text-align: center;
+}
+
+ul li a {
+  display: block;
   text-decoration: none;
-}
-
-.haut, .bas {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.btn_note {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 40rem;
-  width: 20rem;
-  text-align: center;
-  margin-right: 2rem;
-  margin-top: 4rem;
-  margin-bottom: 2rem;
-  font-size: medium;
-  background-color: #FF4081;
-  position: relative;
-  z-index: 1;
-}
-.btn_note:hover::after {
-  opacity: 1;
-}
-.btn_note::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: 1;
-  z-index: -1;
-  transform: opacity 250ms;
-}
-
-.btn_chic {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 40rem;
-  width: 20rem;
-  text-align: center;
-  margin-right: 2rem;
-  margin-top: 4rem;
-  margin-bottom: 2rem;
-  font-size: medium;
-  background-color: #E040FB;
-}
-
-.btn_delice {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 40rem;
-  width: 20rem;
-  text-align: center;
-  margin-right: 2rem;
-  margin-top: 4rem;
-  margin-bottom: 2rem;
-  font-size: medium;
-  background-color: #536DFE;
-}
-
-.btn_gout {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 40rem;
-  width: 20rem;
-  text-align: center;
-  margin-right: 2rem;
-  margin-top: 4rem;
-  margin-bottom: 2rem;
-  font-size: medium;
-  background-color: #40C4FF;
+  font-size: 2rem;
 }
 
 .btn {
@@ -120,52 +49,85 @@ a {
   text-align: center;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-  border-radius: 10rem;
-  -moz-border-radius: 10rem;
-  -webkit-border-radius: 10rem;
+  border-radius: 5rem;
+  -moz-border-radius: 5rem;
+  -webkit-border-radius: 5rem;
   margin-left: 40%;
   margin-right: 50%;
-  width: 20rem;
-  margin-bottom: 4rem;
+  margin-top: 4rem;
+  width: 25rem;
+  margin-bottom: 10rem;
 }
-.btn:active .load__dot {
-  animation: dot 1000ms backwards infinite ease-in-out alternate;
-}
-.btn:active .load__dot--1 {
-  animation-delay: 200ms;
-}
-.btn:active .load__dot--2 {
-  animation-delay: 400ms;
-}
-.btn:active .load__dot--3 {
-  animation-delay: 600ms;
-}
-.btn:active .load__dot--4 {
-  animation-delay: 800ms;
-}
-.btn:active .load__dot--5 {
-  animation-delay: 1000ms;
+.btn_loading {
+  font-size: 2rem;
+  color: #424242;
+  text-align: center;
 }
 
-.load {
-  width: 10vh;
-  height: 1vh;
-  display: flex;
-  justify-content: space-evenly;
-}
-.load__dot {
-  background-color: #0E397F;
-  height: 100%;
-  width: 1vh;
-  animation: dot 1000ms;
+.dot1 {
+  animation: visibility 3s linear infinite;
 }
 
-@keyframes dot {
+@keyframes visibility {
   0% {
-    transform: scalex(0.5);
+    opacity: 1;
+  }
+  65% {
+    opacity: 1;
+  }
+  66% {
+    opacity: 0;
   }
   100% {
-    transform: scalex(1);
+    opacity: 0;
+  }
+}
+.dot2 {
+  animation: visibility2 3s linear infinite;
+}
+
+@keyframes visibility2 {
+  0% {
+    opacity: 0;
+  }
+  21% {
+    opacity: 0;
+  }
+  22% {
+    opacity: 1;
+  }
+  65% {
+    opacity: 1;
+  }
+  66% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+.dot3 {
+  animation: visibility3 3s linear infinite;
+}
+
+@keyframes visibility3 {
+  0% {
+    opacity: 0;
+  }
+  43% {
+    opacity: 0;
+  }
+  44% {
+    opacity: 1;
+  }
+  65% {
+    opacity: 1;
+  }
+  66% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
   }
 }
 footer {
