--- a/main.scss
+++ b/main.scss
@@ -5,21 +5,22 @@ $size: 1vh;
 $anim-dur: 1000ms;
 $anim-delay: $anim-dur / 5;
 @mixin btn-menu {
-    display: block;
+    display: inline-block;
     margin-right: 10rem;
     cursor: pointer;
     text-align: center;
     height: 40rem;
     width: 30rem;
     line-height: 2rem;
-    font-size: 1.5rem;
+    font-size: 2rem;
     opacity: 1;
     transition: opacity 250ms; 
-    overflow: hidden;
-    &:hover {
-        opacity: 0.7;   
+    transform: scale(1);
+    transition: transform 400ms;
+        & :hover{
+        opacity: 0.8;
+        transform: scale(1.5);
     }
-    
 }
 
 
@@ -58,17 +59,20 @@ header{
 }
 .btn_note{
     background-color: #FFCDD2;
-    @include btn-menu;   
+    @include btn-menu;
 }
 .btn_note p a{
     text-decoration: none;
-}
-.btn_note p{
-    transform: scale(1);
-    transition: transform 400ms;
-    & :hover{
-        transform: scale(1.15);
-    }
+    font-family: 'devroyeregular';
+    src: url('DEVROYE_-webfont.eot');
+    src: url('DEVROYE_-webfont.eot?#iefix') format('embedded-opentype'),
+         url('DEVROYE_-webfont.woff2') format('woff2'),
+         url('DEVROYE_-webfont.woff') format('woff'),
+         url('DEVROYE_-webfont.ttf') format('truetype'),
+         url('DEVROYE_-webfont.svg#devroyeregular') format('svg');
+    font-weight: bold;
+    font-style: normal;
+    color: #795548;    
 }
 .btn_chic{
     background-color: #FFEBEE;
@@ -76,6 +80,10 @@ header{
 }
 .btn_chic p a{
     text-decoration: none;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: -webkit-linear-gradient(85deg,#ff3500 20%, #ff00ee 80%);
+    color: -moz-linear-gradient(85deg,#ff3500 20%, #ff00ee 80%); 
 }
 .btn_delice {
     background-color: #E3F2FD;
