--- a/main.scss
+++ b/main.scss
@@ -26,8 +26,6 @@ $anim-delay: $anim-dur / 5;
         transform: scale(1.5);
     }
 }
-
-
 html{
     font-size: 62.5%;
 }
@@ -122,74 +120,46 @@ header{
     margin-top: 4rem;
     width: 25rem;
     margin-bottom: 10rem;
-        &_loading{
-            font-size: 2rem;
-            text-align: center;
+ }
+.spinner {
+    text-align: center;
+  }
+  
+  .spinner > div {
+    width: 18px;
+    height: 18px;
+    background-color: $color-secondary;
+  
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  }
+  
+  .spinner .bounce1 {
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+  }
+  
+  .spinner .bounce2 {
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+  }
+  
+  @-webkit-keyframes sk-bouncedelay {
+    0%, 80%, 100% { -webkit-transform: scale(0) }
+    40% { -webkit-transform: scale(1.0) }
+  }
+  
+  @keyframes sk-bouncedelay {
+    0%, 80%, 100% { 
+      -webkit-transform: scale(0);
+      transform: scale(0);
+    } 40% { 
+      -webkit-transform: scale(1.0);
+      transform: scale(1.0);
     }
-}   
-.dot1 {
-    animation: visibility 1s linear infinite both;
-     }
-    @keyframes visibility {
-    0% {
-     opacity: 1;
-    }
-    65% {
-    opacity: 1;
-    }
-    66% {
-    opacity: 0;
-    }
-    100% {
-    opacity: 0;
-    }
-    }
-.dot2 {
-    animation: visibility2 1s linear infinite both;
-    }
-    @keyframes visibility2 {
-    0% {
-    opacity: 0;
-    }
-    21% {
-    opacity: 0;
-    }
-    22% {
-    opacity: 1;
-    }
-    65% {
-    opacity: 1;
-    }
-    66% {
-    opacity: 0;
-    }
-    100% {
-    opacity: 0;
-    }
-    }
-.dot3 {
-    animation: visibility3 1s linear infinite both;
-    }
-     @keyframes visibility3 {
-    0% {
-    opacity: 0;
-    }
-    43% {
-    opacity: 0;
-    }
-    44% {
-    opacity: 1;
-    }
-    65% {
-    opacity: 1;
-    }
-    66% {
-    opacity: 0;
-    }
-    100% {
-    opacity: 0;
-    }
-}
+  }
 footer{
     display: flex;
     justify-content: space-between;
@@ -249,7 +219,23 @@ h1, h2, .tete, .pied{
 }
 h2{
     margin-top: 6rem;
+    position: relative;
+    cursor: pointer;
 }
+h2:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 2px;
+    background: red;
+    transition: transform 500ms ease;
+  }
+   
+  h2:hover:after {
+    width: 100%;
+  }
 h1{
     padding-top: 4rem;
     padding-bottom: 3rem;
