--- a/style.css
+++ b/style.css
@@ -177,75 +177,47 @@ header {
   width: 25rem;
   margin-bottom: 10rem;
 }
-.btn_loading {
-  font-size: 2rem;
+
+.spinner {
   text-align: center;
 }
 
-.dot1 {
-  animation: visibility 1s linear infinite both;
+.spinner > div {
+  width: 18px;
+  height: 18px;
+  background-color: #FFEB3B;
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
 }
 
-@keyframes visibility {
-  0% {
-    opacity: 1;
-  }
-  65% {
-    opacity: 1;
-  }
-  66% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-.dot2 {
-  animation: visibility2 1s linear infinite both;
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
 }
 
-@keyframes visibility2 {
-  0% {
-    opacity: 0;
-  }
-  21% {
-    opacity: 0;
-  }
-  22% {
-    opacity: 1;
-  }
-  65% {
-    opacity: 1;
-  }
-  66% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-.dot3 {
-  animation: visibility3 1s linear infinite both;
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
 }
 
-@keyframes visibility3 {
-  0% {
-    opacity: 0;
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
   }
-  43% {
-    opacity: 0;
+  40% {
+    -webkit-transform: scale(1);
   }
-  44% {
-    opacity: 1;
+}
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
   }
-  65% {
-    opacity: 1;
-  }
-  66% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
+  40% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
   }
 }
 footer {
@@ -311,6 +283,23 @@ h1, h2, .tete, .pied {
 
 h2 {
   margin-top: 6rem;
+  position: relative;
+  cursor: pointer;
+}
+
+h2:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 2px;
+  background: red;
+  transition: transform 500ms ease;
+}
+
+h2:hover:after {
+  width: 100%;
 }
 
 h1 {
