--- a/main.scss
+++ b/main.scss
@@ -18,12 +18,14 @@ $anim-delay: $anim-dur / 5;
     position: relative;
     overflow: hidden;
     opacity: 1;
-    transition: opacity 250ms; 
+    -webkit-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out; 
     transform: scale(1);
-    transition: transform 400ms;
+    -webkit-transform: scale(1);
+    transition: 0.3s ease-in-out;
     &:hover{
-        opacity: 0.7;
-        transform: scale(1.5);
+        opacity: 0.5;
+        transform: scale(1.2);
     }
 }
 html{
@@ -121,37 +123,37 @@ header{
     width: 25rem;
     margin-bottom: 10rem;
  }
-.spinner {
+.loader {
     text-align: center;
+    margin-left: 2rem;
   }
   
-  .spinner > div {
-    width: 18px;
-    height: 18px;
+  .loader > div {
+    width: 10px;
+    height: 10px;
     background-color: $color-secondary;
-  
     border-radius: 100%;
     display: inline-block;
-    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+    -webkit-animation: loading 1.4s infinite ease-in-out both;
+    animation: loading 1.4s infinite ease-in-out both;
   }
   
-  .spinner .bounce1 {
+  .loader .dot1 {
     -webkit-animation-delay: -0.32s;
     animation-delay: -0.32s;
   }
   
-  .spinner .bounce2 {
+  .loader .dot2 {
     -webkit-animation-delay: -0.16s;
     animation-delay: -0.16s;
   }
   
-  @-webkit-keyframes sk-bouncedelay {
+  @-webkit-keyframes loading {
     0%, 80%, 100% { -webkit-transform: scale(0) }
     40% { -webkit-transform: scale(1.0) }
   }
   
-  @keyframes sk-bouncedelay {
+  @keyframes loading {
     0%, 80%, 100% { 
       -webkit-transform: scale(0);
       transform: scale(0);
@@ -208,11 +210,14 @@ footer{
     margin-bottom: 10rem;
     padding-top: 4rem;
     padding-bottom: 4rem;
+    font-family: Helvetica, Arial;
+    padding-left: 10rem;
+    padding-right: 10rem;
 }        
 h1, h2, .tete, .pied{
     text-align: center;
     font-size: 2rem;
-    color: firebrick;
+    color: rgb(110, 6, 6);
 }
 .tete, .pied{
     font-weight: bold;
@@ -250,13 +255,14 @@ h1{
     display: inline-block;
     line-height: 4rem;
     font-size: 2rem;
+    padding-top: 4rem;
 }
 .prix{
     text-align: right;
     margin-left: 3rem;
 }
 .plat{
-    margin-right: 3rem;
+    margin-right: 20rem;
     text-align: left;
 }
 .pied{
@@ -278,6 +284,9 @@ h1{
     margin-top: 4rem;
     padding-top: 4rem;
     padding-bottom: 4rem;
+    font-family: Helvetica, Arial;
+    padding-left: 10rem;
+    padding-right: 10rem;
 }
 
  // page menu 3
@@ -292,6 +301,9 @@ h1{
     margin-top: 4rem;
     padding-top: 4rem;
     padding-bottom: 4rem;
+    font-family: Helvetica, Arial;
+    padding-left: 10rem;
+    padding-right: 10rem;
 }
 
 // page menu 4
@@ -305,4 +317,7 @@ h1{
     margin-top: 4rem;
     padding-top: 4rem;
     padding-bottom: 4rem;
+    font-family: Helvetica, Arial;
+    padding-left: 10rem;
+    padding-right: 10rem;
 }
