--- a/style.css
+++ b/style.css
@@ -48,14 +48,18 @@ header {
   opacity: 1;
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
-  perspective: 500px;
+}
+.btn_note:hover {
+  opacity: 0.5;
+}
+
+.btn_note p {
   transform: scale(1);
   -webkit-transform: scale(1);
   transition: 0.3s ease-in-out;
 }
-.btn_note:hover {
-  opacity: 0.5;
-  transform: scale3d(1.2, 1.2, 0.2);
+.btn_note p:hover {
+  transform: scale(1.5);
 }
 
 .btn_note p a {
@@ -83,22 +87,30 @@ header {
   opacity: 1;
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
-  perspective: 500px;
+}
+.btn_chic:hover {
+  opacity: 0.5;
+}
+
+.btn_chic p {
   transform: scale(1);
   -webkit-transform: scale(1);
   transition: 0.3s ease-in-out;
 }
-.btn_chic:hover {
-  opacity: 0.5;
-  transform: scale3d(1.2, 1.2, 0.2);
+.btn_chic p:hover {
+  transform: scale(1.5);
 }
 
 .btn_chic p a {
   text-decoration: none;
   font-family: Arial, sans-serif;
-  color: linear-gradient(98deg, #df560f 20%, #d300ff 55%, #3211c5 80%);
-  color: -webkit-linear-gradient(98deg, #df560f 20%, #d300ff 55%, #3211c5 80%);
-  color: -moz-linear-gradient(98deg, #df560f 20%, #d300ff 55%, #3211c5 80%);
+  background: #df560f;
+  background: linear-gradient(90deg, #df560f 20%, #3211c5 55%);
+  background: -webkit-linear-gradient(90deg, #df560f 20%, #3211c5 55%);
+  background: -moz-linear-gradient(90deg, #df560f 20%, #3211c5 55%);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
 }
 
 .btn_delice {
@@ -118,14 +130,18 @@ header {
   opacity: 1;
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
-  perspective: 500px;
+}
+.btn_delice:hover {
+  opacity: 0.5;
+}
+
+.btn_delice p {
   transform: scale(1);
   -webkit-transform: scale(1);
   transition: 0.3s ease-in-out;
 }
-.btn_delice:hover {
-  opacity: 0.5;
-  transform: scale3d(1.2, 1.2, 0.2);
+.btn_delice p:hover {
+  transform: scale(1.5);
 }
 
 .btn_delice p a {
@@ -151,14 +167,18 @@ header {
   opacity: 1;
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
-  perspective: 500px;
+}
+.btn_gout:hover {
+  opacity: 0.5;
+}
+
+.btn_gout p {
   transform: scale(1);
   -webkit-transform: scale(1);
   transition: 0.3s ease-in-out;
 }
-.btn_gout:hover {
-  opacity: 0.5;
-  transform: scale3d(1.2, 1.2, 0.2);
+.btn_gout p:hover {
+  transform: scale(1.5);
 }
 
 .btn_gout p a {
